--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,11 @@ services:
     image: thanks-fes-web
     container_name: thanks-fes-web
     command: /bin/sh -c "envsubst '$$BACKEND_API_SERVER' < /etc/nginx/conf.d/default.conf.template > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"
+    # command: /bin/sh -c "envsubst '$$BACKEND_API_SERVER' < /etc/nginx/conf.d/default.conf.template > /etc/nginx/conf.d/default.conf && tail -f /dev/null"
     environment:
       BACKEND_API_SERVER: ${BACKEND_API_SERVER}
+    env_file:
+      - ./thanks-fes-web/.env
     extra_hosts:
       - "gateway.docker.internal:host-gateway"
     ports:
