--- a/thanks-fes-api/.env
+++ b/thanks-fes-api/.env
@@ -5,10 +5,10 @@ APP_MODE=prod
 ALLOWED_ORIGINS=*
 
 # DB
-DB_USERNAME=db2inst1
-DB_PASSWORD=password
-DB_DATABASE=bludb
+DB_USERNAME=postgres
+DB_PASSWORD=Passw0rd
+DB_DATABASE=postgres
 DB_HOST=thanks-fes-db
-DB_PORT=50000
-DB_SCHEMA=thanks_fes
+DB_PORT=5432
+DB_SCHEMA=public
 DB_SSL_CONNECTION=False
