--- a/thanks-fes-web/default.conf.template
+++ b/thanks-fes-web/default.conf.template
@@ -19,7 +19,7 @@ server {
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Forwarded-Proto $scheme;
-    proxy_pass http://BACKEND_API_SERVER/;
+    proxy_pass http://thanks-fes-api:8888/;
   }
 
   location /ws/ {
@@ -27,6 +27,6 @@ server {
     proxy_set_header Host $host;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection $connection_upgrade;
-    proxy_pass http://BACKEND_API_SERVER/;
+    proxy_pass http://thanks-fes-api:8888/;
   }
 }
