--- a/thanks-fes-api/.env
+++ b/thanks-fes-api/.env
@@ -1,5 +1,5 @@
 # APP
-APP_MODE=prod
+APP_MODE=local
 
 # API
 ALLOWED_ORIGINS=*
@@ -8,7 +8,7 @@ ALLOWED_ORIGINS=*
 DB_USERNAME=postgres
 DB_PASSWORD=Passw0rd
 DB_DATABASE=postgres
-DB_HOST=thanks-fes-db
+DB_HOST=localhost
 DB_PORT=5432
 DB_SCHEMA=public
 DB_SSL_CONNECTION=False
