--- a/thanks-fes-api/redis.conf
+++ b/thanks-fes-api/redis.conf
@@ -1,7 +1,7 @@
 port 6379
 bind 127.0.0.1
 daemonize no
-logfile "/usr/local/etc/redis/logs"
+logfile ""
 appendonly yes
 appendfilename "appendonly.aof"
 dir ./
