--- a/thanks-fes-api/.env
+++ b/thanks-fes-api/.env
@@ -6,9 +6,9 @@ ALLOWED_ORIGINS=*
 
 # DB
 DB_USERNAME=postgres
-DB_PASSWORD=Passw0rd
+DB_PASSWORD=postgres
 DB_DATABASE=postgres
 DB_HOST=localhost
 DB_PORT=5432
-DB_SCHEMA=public
+DB_SCHEMA=thanks_fes
 DB_SSL_CONNECTION=False
