--- a/thanks-fes-api/Dockerfile
+++ b/thanks-fes-api/Dockerfile
@@ -18,4 +18,4 @@ EXPOSE 8888
 COPY redis.conf /usr/local/etc/redis/redis.conf
 RUN mkdir -p /usr/local/etc/redis/logs
 
-CMD service redis-server start && uvicorn main:app --host 0.0.0.0 --port 8888 --workers 16 --ws-ping-interval 25
+CMD service redis-server start && uvicorn main:app --host 0.0.0.0 --port 8888 --workers 1 --ws-ping-interval 20 --ws-ping-timeout 60
